# Hcode_Claude

./: .gitignore  CLAUDE.md  USAGE.md  WIRE_PROTOCOL.md  pyproject.toml  readme.md
.claude/: settings.json
docs/: S0_COMPLETION_RECORD.md
docs/superpowers/plans/: 2026-06-12-s0-skeleton-plan.md  2026-06-21-s1-agent-loop-plan.md
docs/superpowers/specs/: 2026-06-12-s0-skeleton-design.md  2026-06-21-s1-agent-loop-design.md
scripts/: gen_protocol_doc.py
src/hcode_claude/cli/: main.py
src/hcode_claude/core/: __init__.py  app.py  config.py  context.py  loop.py  runner.py
src/hcode_claude/core/events/: __init__.py  bus.py  printer.py  writer.py
src/hcode_claude/core/llm/: __init__.py  provider.py  types.py
src/hcode_claude/core/protocol/: commands.py  envelope.py  events.py
src/hcode_claude/core/tools/: __init__.py  base.py  bash.py  list_dir.py  read_file.py  registry.py  write_file.py
src/hcode_claude/core/transport/: socket_server.py
tests/: conftest.py
tests/cli/: test_main.py
tests/core/: test_app.py  test_config.py  test_context.py  test_loop.py  test_runner.py
tests/core/events/: __init__.py  test_bus.py  test_printer.py  test_writer.py
tests/core/llm/: __init__.py  test_provider.py  test_types.py
tests/core/protocol/: test_commands.py  test_envelope.py  test_events.py
tests/core/tools/: __init__.py  test_builtin_tools.py  test_registry.py
