[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HcodeClaude"
version = "0.0.1"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
]

[project.scripts]
hcode = "hcode_claude.cli.main:main"
hcode-core = "hcode_claude.core.app:run"
hcode-tui = "hcode_claude.tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hcode_claude"]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
